--- a/app/bundles/CoreBundle/Assets/css/app/less/components/table.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/table.less
@@ -22,7 +22,7 @@
     border-bottom: 1px solid @table-border-color;
   }
 }
-table i:not(.fa-lg) {
+table i:not([class^="ri-toggle"], [class*=" ri-toggle"]) {
   font-size: 14px;
 }
 
